RESOLVED FIXED82256
Always set V8 wrappers via V8DOMWrapper::setJSWrapperFor* instead of WeakReferenceMap::set()
https://bugs.webkit.org/show_bug.cgi?id=82256
Summary Always set V8 wrappers via V8DOMWrapper::setJSWrapperFor* instead of WeakRefe...
Adam Klein
Reported 2012-03-26 16:17:11 PDT
Always set V8 wrappers via V8DOMWrapper::setJSWrapperFor* instead of WeakReferenceMap::set()
Attachments
Patch (17.39 KB, patch)
2012-03-26 16:19 PDT, Adam Klein
no flags
Fix isActiveNode assert (17.39 KB, patch)
2012-03-26 16:37 PDT, Adam Klein
no flags
Patch for relanding (17.44 KB, patch)
2012-03-27 10:08 PDT, Adam Klein
no flags
Patch (11.08 KB, patch)
2012-04-11 15:31 PDT, Adam Klein
no flags
Adam Klein
Comment 1 2012-03-26 16:19:25 PDT
Adam Klein
Comment 2 2012-03-26 16:37:04 PDT
Created attachment 133925 [details] Fix isActiveNode assert
WebKit Review Bot
Comment 3 2012-03-26 19:58:46 PDT
Comment on attachment 133925 [details] Fix isActiveNode assert Clearing flags on attachment: 133925 Committed r112199: <http://trac.webkit.org/changeset/112199>
WebKit Review Bot
Comment 4 2012-03-26 19:58:51 PDT
All reviewed patches have been landed. Closing bug.
Adam Klein
Comment 5 2012-03-27 10:00:39 PDT
Got rolled out, just need to properly define SVGElemetInstance to fix cr-win build.
Adam Klein
Comment 6 2012-03-27 10:08:24 PDT
Created attachment 134089 [details] Patch for relanding
Adam Klein
Comment 7 2012-03-27 14:38:43 PDT
Adam Klein
Comment 8 2012-04-09 16:57:52 PDT
This was rolled out.
Adam Klein
Comment 9 2012-04-11 15:31:20 PDT
Kentaro Hara
Comment 10 2012-04-11 20:41:19 PDT
Comment on attachment 136768 [details] Patch Looks OK.
WebKit Review Bot
Comment 11 2012-04-12 14:11:56 PDT
Comment on attachment 136768 [details] Patch Clearing flags on attachment: 136768 Committed r114034: <http://trac.webkit.org/changeset/114034>
WebKit Review Bot
Comment 12 2012-04-12 14:12:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.